[package]
name = "csv2svg"
version = "0.1.5"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2018"
repository = "https://github.com/Canop/csv2svg"
description = "take a csv as input and outputs svg"
keywords = ["csv", "svg", "graph", "cli"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0"
argh = "0.1.3"
chrono = "0.4"
cli-log = "0.1"
csv = "1.1"
directories-next = "2.0"
libc = "0.2"
log = "0.4"
num-traits = "0.2.14"
open = "1.1"
svg = "0.8"
tempfile = "3.1"

[patch.crates-io]
