[package]
name = "csv2svg"
version = "0.2.3"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2018"
repository = "https://github.com/Canop/csv2svg"
description = "take a csv as input and outputs svg"
keywords = ["csv", "svg", "graph", "cli"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.49"
argh = "0.1.12"
chrono = "0.4"
cli-log = "2.0"
csv = "1.1"
directories = "5"
libc = "0.2"
log = "0.4"
num-traits = "0.2.14"
open = "1.1"
svg = "0.16"
tempfile = "3.1"
crossterm = "0.28"

[patch.crates-io]
